@@ -1,3 +1,14 @@
+2009-11-14  Matevz Tadel  <matevz.tadel@ijs.si>
+
+	Allow un-registration of time-maker clients.
+
+	* Glasses/TimeMaker.cxx:
+	* Glasses/TimeMaker.h:
+	Add function RemoveClient(ZGlass* lens).
+
+	* Stones/TringTvor.cxx:
+	Add some comments.
+
 2009-08-14  Matevz Tadel  <matevz.tadel@ijs.si>
 
 	* Rnr/GL/ZGlProgram_GL_Rnr.cxx:
